# besenji

./: CMakeLists.txt  README.md  besenji
headers/: sniffer.h  utils.h
src/: main.c  sniffer.c  utils.c
